--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -177,3 +177,17 @@ $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
 .btn-animation {
   @apply transform active:scale-95 transition-all;
 }
+
+.btn-floating {
+  position: fixed;
+  z-index: 9999999;
+
+  $gap-size: 2.5rem;
+  bottom: calc(50px + #{$gap-size});
+  right: $gap-size;
+
+  @apply shadow;
+  &.btn-lg {
+    @apply shadow-lg;
+  }
+}
