--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -55,3 +55,23 @@
     }
   }
 }
+
+.select-underline {
+  div[class*="-control"] {
+    border: none;
+    box-shadow: none;
+
+    div[class*="-ValueContainer"] {
+      @apply h-[2.5rem] text-xl font-[500] w-full;
+      //padding-left: 0;
+      //padding-right: 0;
+      padding: 0;
+    }
+
+    div[class*="-IndicatorsContainer"] {
+      & > span[class*="-indicatorSeparator"] {
+        width: 0;
+      }
+    }
+  }
+}
