--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -61,7 +61,8 @@
     border: none;
     box-shadow: none;
 
-    div[class*="-ValueContainer"] {
+    div[class*="-ValueContainer"],
+    & > div:nth-child(1) {
       @apply h-[2.5rem] text-xl font-[500] w-full;
       //padding-left: 0;
       //padding-right: 0;
