모바일 탑바 상단고정 적용 깨지는 문제 수정

--- a/src/styles/v3/V3MainLayout.module.scss
+++ b/src/styles/v3/V3MainLayout.module.scss
@@ -10,6 +10,8 @@
   $max-width: 580px;
 
   .layout,
+  [data-component="TopNavMobileContainer"],
+  [data-component="ModalLikeTopbar"],
   [data-component="BottomNavMobile"],
   [data-component="BottomNavMobileBackdrop"],
   div[class*="modal-open"] {
