--- a/src/styles/dashboard-calendar.scss
+++ b/src/styles/dashboard-calendar.scss
@@ -4,7 +4,10 @@
   /*border: 1px solid #a0a096;*/
   /*font-family: Arial, Helvetica, sans-serif;*/
   line-height: 1.125em;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
+
 .react-calendar--doubleView {
   width: 700px;
 
@@ -163,7 +166,8 @@ section[data-component="MobileSection.Item"].h-0 {
     height: 20px;
     line-height: 1;
 
-    $size: 0.68rem;
+    //$size: 0.68rem;
+    $size: 10px;
     font-size: $size;
     //font-weight: bold;
 
