--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,145 +1,171 @@
-
 @each $n in (2, 3) {
-  .badge-#{$n}xs {
-    height: calc(0.75rem / #{$n}) !important;
-    width: calc(0.75rem / #{$n}) !important;
-    font-size: calc(0.75rem / #{$n}) !important;
-    line-height: calc(.75rem / #{$n}) !important;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
+    .badge-#{$n}xs {
+        height: calc(0.75rem / #{$n}) !important;
+        width: calc(0.75rem / #{$n}) !important;
+        font-size: calc(0.75rem / #{$n}) !important;
+        line-height: calc(0.75rem / #{$n}) !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
 }
 
 /**
  * Buttons
  */
 .btn {
-  & > .btn-icon {
-    //@extend .text-xl, .font-bold, .mr-2 !optional;
+    & > .btn-icon {
+        //@extend .text-xl, .font-bold, .mr-2 !optional;
 
-    //@extend .text-xl;
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+        //@extend .text-xl;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
 
-    //@extend .font-bold;
-    font-weight: 700;
+        //@extend .font-bold;
+        font-weight: 700;
 
-    //@extend .mr-2;
-    margin-right: 0.5rem;
-  }
+        //@extend .mr-2;
+        margin-right: 0.5rem;
+    }
 
-  &-sm > .btn-icon {
-    //@extend .text-lg, .font-bold, .mr-1 !optional;
+    &-sm > .btn-icon {
+        //@extend .text-lg, .font-bold, .mr-1 !optional;
 
-    //@extend .text-lg;
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+        //@extend .text-lg;
+        font-size: 1.125rem;
+        line-height: 1.75rem;
 
-    //@extend .font-bold;
-    font-weight: 700;
+        //@extend .font-bold;
+        font-weight: 700;
 
-    //@extend .mr-1;
-    margin-right: 0.25rem;
-  }
+        //@extend .mr-1;
+        margin-right: 0.25rem;
+    }
 
-  &-big {
-    height: 3.5rem;
-    min-height: 3.5rem;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    font-size: 1rem;
-  }
+    &-big {
+        height: 3.5rem;
+        min-height: 3.5rem;
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
+        font-size: 1rem;
+    }
 
-  &-weekly {
-    border-color: transparent;
-    --tw-bg-opacity: 0.2;
-    font-weight: 400;
-    //--tw-text-opacity: 1;
-    //--tw-border-opacity: 0;
-    //border-color: hsl(var(--s) / var(--tw-border-opacity));
-    //background-color: hsl(var(--s) / var(--tw-bg-opacity));
-    //color: hsl(var(--sc) / var(--tw-text-opacity));
+    &-weekly {
+        border-color: transparent;
+        --tw-bg-opacity: 0.2;
+        font-weight: 400;
+        //--tw-text-opacity: 1;
+        //--tw-border-opacity: 0;
+        //border-color: hsl(var(--s) / var(--tw-border-opacity));
+        //background-color: hsl(var(--s) / var(--tw-bg-opacity));
+        //color: hsl(var(--sc) / var(--tw-text-opacity));
 
-    &:hover {--tw-bg-opacity: 0.2;}
+        &:hover {
+            --tw-bg-opacity: 0.2;
+        }
 
-    &.btn-primary   {color: hsl(var(--p) / var(--tw-border-opacity))}
-    &.btn-secondary {color: hsl(var(--s) / var(--tw-border-opacity))}
-    &.btn-info      {color: hsl(var(--in) / 1)}
-  }
+        &.btn-primary {
+            color: hsl(var(--p) / var(--tw-border-opacity));
+        }
+        &.btn-secondary {
+            color: hsl(var(--s) / var(--tw-border-opacity));
+        }
+        &.btn-info {
+            color: hsl(var(--in) / 1);
+        }
+    }
 }
 
-$color-name-list: ('slate', 'gray', 'zinc', 'stone', 'red', 'orange', 'amber', 'yellow', 'lime', 'green', 'emerald', 'teal', 'cyan', 'sky', 'blue', 'indigo', 'violet', 'purple', 'fuchsia', 'pink', 'rose');
+$color-name-list: (
+    'slate',
+    'gray',
+    'zinc',
+    'stone',
+    'red',
+    'orange',
+    'amber',
+    'yellow',
+    'lime',
+    'green',
+    'emerald',
+    'teal',
+    'cyan',
+    'sky',
+    'blue',
+    'indigo',
+    'violet',
+    'purple',
+    'fuchsia',
+    'pink',
+    'rose'
+);
 $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
 
 @each $color-name in $color-name-list {
-  @each $scale in $color-scale-list {
-    $scale-darken: if($scale > 700, 900, $scale + 200);
+    @each $scale in $color-scale-list {
+        $scale-darken: if($scale > 700, 900, $scale + 200);
 
-    .btn-#{$color-name}-#{$scale} {
-      @apply border-#{$color-name}-#{$scale} bg-#{$color-name}-#{$scale};
+        .btn-#{$color-name}-#{$scale} {
+            @apply border-#{$color-name}-#{$scale} bg-#{$color-name}-#{$scale};
 
-      @if $scale >= 600 {
-        @apply text-white;
-      } @else {
-        @apply text-#{$color-name}-900;
-      }
+            @if $scale >= 600 {
+                @apply text-white;
+            } @else {
+                @apply text-#{$color-name}-900;
+            }
 
-      &:hover {
-        @apply bg-#{$color-name}-#{$scale};
-        @apply text-white; // white
-      }
+            &:hover {
+                @apply bg-#{$color-name}-#{$scale};
+                @apply text-white; // white
+            }
 
-      &.btn-outline {
-        @apply border-#{$color-name}-#{$scale} text-#{$color-name}-#{$scale};
-        background-color: initial;
+            &.btn-outline {
+                @apply border-#{$color-name}-#{$scale} text-#{$color-name}-#{$scale};
+                background-color: initial;
 
-        &:hover {
-          @apply bg-#{$color-name}-#{$scale};
-          @apply text-white; // white
+                &:hover {
+                    @apply bg-#{$color-name}-#{$scale};
+                    @apply text-white; // white
+                }
+            }
         }
-      }
     }
-  }
 }
 
 .btn-gray {
-  @apply border-gray-300 bg-gray-300;
-  @apply text-gray-800; // black
-
-  &:hover {
-    @apply bg-gray-500;
-    @apply text-white; // white
-  }
-
-  &.btn-outline {
-    @apply border-gray-500 text-gray-500;
-    background-color: initial;
+    @apply border-gray-300 bg-gray-300;
+    @apply text-gray-800; // black
 
     &:hover {
-      @apply bg-gray-500;
-      @apply text-white; // white
+        @apply bg-gray-500;
+        @apply text-white; // white
     }
-  }
-}
 
+    &.btn-outline {
+        @apply border-gray-500 text-gray-500;
+        background-color: initial;
+
+        &:hover {
+            @apply bg-gray-500;
+            @apply text-white; // white
+        }
+    }
+}
 
 .btn-disabled,
 .btn-disabled:hover,
 .btn[disabled],
 .btn[disabled]:hover {
-  --tw-border-opacity: 0;
-  background-color: hsl(var(--n) / var(--tw-bg-opacity));
-  --tw-bg-opacity: 0.2;
-  color: hsl(var(--bc) / var(--tw-text-opacity));
-  --tw-text-opacity: 0.2;
+    --tw-border-opacity: 0;
+    background-color: hsl(var(--n) / var(--tw-bg-opacity));
+    --tw-bg-opacity: 0.2;
+    color: hsl(var(--bc) / var(--tw-text-opacity));
+    --tw-text-opacity: 0.2;
 }
 
 .btn-disabled,
 .btn[disabled] {
-  pointer-events: none;
+    pointer-events: none;
 }
-
-
 
 //.hover-no {
 //  &.btn-primary   {@apply text-white bg-primary}
@@ -148,46 +174,50 @@ $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
 //}
 
 .btn-hover-init:hover {
-  background-color: inherit !important;
+    background-color: inherit !important;
 }
 
 .btn_google_signin_light {
-  background-size: contain;
-  background-position: center center;
-  background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
 
-  background-image: url("/home/202305/btn_google_signin_light_normal_web@2x.png");
-  &:hover {
-    background-image: url("/home/202305/btn_google_signin_light_pressed_web@2x.png");
-  }
+    background-image: url('/home/202305/btn_google_signin_light_normal_web@2x.png');
+    &:hover {
+        background-image: url('/home/202305/btn_google_signin_light_pressed_web@2x.png');
+    }
 }
 
 .btn-like {
-  @apply w-full flex items-center;
-  @apply rounded-lg btn-animation cursor-pointer;
+    @apply w-full flex items-center;
+    @apply rounded-lg btn-animation cursor-pointer;
 
-  & + .absolute .btn-like-follow {
-    @apply transition-all;
-  }
-  &:active + .absolute .btn-like-follow {
-    transform: translateX(-10px);
-  }
+    & + .absolute .btn-like-follow {
+        @apply transition-all;
+    }
+    &:active + .absolute .btn-like-follow {
+        transform: translateX(-10px);
+    }
 }
 
 .btn-animation {
-  @apply transform active:scale-95 transition-all;
+    @apply transform active:scale-95 transition-all;
 }
 
 .btn-floating {
-  position: fixed;
-  z-index: 9999999;
+    position: fixed;
+    z-index: 9999999;
 
-  $gap-size: 2.5rem;
-  bottom: calc(50px + #{$gap-size});
-  right: $gap-size;
+    $gap-size: 2.5rem;
+    bottom: calc(50px + #{$gap-size});
+    right: $gap-size;
 
-  @apply shadow;
-  &.btn-lg {
-    @apply shadow-lg;
-  }
+    @apply shadow;
+    &.btn-lg {
+        @apply shadow-lg;
+    }
+}
+
+.btn-modal {
+    @apply btn btn-lg btn-block btn-scordi font-medium text-white text-xl bg-slate-50;
 }
