--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -479,11 +479,14 @@ body.hide-channel-talk {
   //border: 10px dotted #000;
   position: relative;
 
+  visibility: hidden;
+
   .title-container {
     position: fixed;
     top: 0;
     width: 100%;
     height: 100vh;
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -579,6 +582,7 @@ body.hide-channel-talk {
     top: 0;
     width: 100%;
     height: 100vh;
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -686,6 +690,7 @@ body.hide-channel-talk {
     top: 0;
     width: 100%;
     height: 100vh;
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
