--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -502,6 +502,8 @@ body.hide-channel-talk {
       text-align: center;
       @apply text-5xl;
       visibility: hidden;
+      background-color: rgba(255, 255, 255, 0.7);
+      box-shadow: 0 0 40px #fff;
     }
 
     /**
