랜딩페이지 / 모바일 가독성 수정

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -786,7 +786,7 @@ body.hide-channel-talk {
 
       .question {
         //margin-right: auto;
-        @apply text-2xl font-semibold;
+        @apply text-lg sm:text-xl md:text-2xl font-semibold;
       }
 
       .icon-wrapper {
