--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -823,3 +823,19 @@ body.hide-channel-talk {
     }
   }
 }
+
+.whattime-inline-widget {
+  height: 690px;
+
+  @media screen and (max-width: 1024px) {
+    height: 970px;
+  }
+
+  @media screen and (max-width: 768px) {
+    height: 900px;
+  }
+
+  @media screen and (max-width: 375px) {
+    height: 800px;
+  }
+}
