--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -494,7 +494,7 @@ body.hide-channel-talk {
 }
 
 #CollectAppSection {
-  $height: 5000px;
+  $height: 2000px;
   --anim-range-start: 160vh;
   --anim-range-end: calc(200vh + #{$height});
 
@@ -504,15 +504,18 @@ body.hide-channel-talk {
 
   visibility: hidden;
 
-  .title-container {
+  .animation-layer {
     position: fixed;
     top: 0;
+    z-index: -1;
     width: 100%;
     height: 100vh;
-    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .title-container {
 
     /**
      * title 1,2 common
@@ -541,10 +544,10 @@ body.hide-channel-talk {
       5% {
         opacity: 1;
       }
-      50% {
+      25% {
         opacity: 1;
       }
-      70% {
+      40% {
         opacity: 0;
       }
       100% {
@@ -571,12 +574,12 @@ body.hide-channel-talk {
         transform: translateY(0);
         visibility: visible;
       }
-      50% {
+      25% {
         opacity: 0;
         transform: translateY(0);
         visibility: visible;
       }
-      70% {
+      40% {
         opacity: 1;
         transform: translateY(-3rem);
         visibility: visible;
@@ -603,14 +606,6 @@ body.hide-channel-talk {
   }
 
   .logo-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
     @keyframes logo-collecting {
       0% {
@@ -709,62 +704,54 @@ body.hide-channel-talk {
     }
   }
 
-
   .bg-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-    @keyframes logo-background {
-      0% {
-        opacity: 0;
-      }
-      10% {
-        opacity: 0;
-      }
-      40% {
-        opacity: 1;
-      }
-      75% {
-        opacity: 1;
-      }
-      80% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
+    //@keyframes logo-background {
+    //  0% {
+    //    opacity: 0;
+    //  }
+    //  10% {
+    //    opacity: 0;
+    //  }
+    //  40% {
+    //    opacity: 1;
+    //  }
+    //  75% {
+    //    opacity: 1;
+    //  }
+    //  80% {
+    //    opacity: 0;
+    //  }
+    //  100% {
+    //    opacity: 0;
+    //  }
+    //}
 
     .background {
-      width: 100%;
-      height: 100vh;
-      opacity: 0;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      transform: translateY(3rem);
-      transform-origin: 0 100%;
-      animation-timeline: scroll(nearest block);
-      animation-range: var(--anim-range-start) var(--anim-range-end);
-      animation: logo-background auto linear;
+      //width: 100%;
+      //height: 100%;
+      ////opacity: 0;
+      //background-repeat: no-repeat;
+      //background-position: center;
+      //background-size: contain;
+      //transform: translateY(3rem);
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      //animation: logo-background auto linear;
+      //transform-origin: 0 100%;
+      //animation-timeline: scroll(nearest block);
+      //animation-range: var(--anim-range-start) var(--anim-range-end);
+
+      //display: flex;
+      //align-items: center;
+      //justify-content: center;
 
       & > div {
-        $scordi-size: 150px;
-        width: $scordi-size;
-        height: $scordi-size;
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
+        //$scordi-size: 150px;
+        //width: $scordi-size;
+        //height: $scordi-size;
+        //background-position: center;
+        //background-size: contain;
+        //background-repeat: no-repeat;
       }
     }
   }
@@ -837,5 +824,63 @@ body.hide-channel-talk {
 
   @media screen and (max-width: 375px) {
     height: 800px;
+  }
+}
+
+
+@keyframes logo-background {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.logo-background-blurred {
+  $height: 2000px;
+  --anim-range-start: 160vh;
+  --anim-range-end: calc(200vh + #{$height});
+
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  transform: translateY(3rem);
+
+  opacity: 0;
+  animation: logo-background auto linear;
+  transform-origin: 0 100%;
+  animation-timeline: scroll(nearest block);
+  animation-range: var(--anim-range-start) var(--anim-range-end);
+
+  .logo-background-scordi {
+    $scordi-size: 150px;
+    width: $scordi-size;
+    height: $scordi-size;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
