--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,6 +13,12 @@
     }
 }
 
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1280px !important;
+  }
+}
+
 html,
 body {
   padding: 0;
