--- a/src/styles/packs/app.scss
+++ b/src/styles/packs/app.scss
@@ -3,6 +3,7 @@
 @import "../grid";
 @import "../globals";
 @import "../mainPage";
+@import "../leftNavBar";
 @import "../dashboard-calendar";
 @import "../content-layout/index";
 @import "../v2/index";
