--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,12 +1,10 @@
-@each $n in (2, 3) {
-    .badge-#{$n}xs {
-        height: calc(0.75rem / #{$n}) !important;
-        width: calc(0.75rem / #{$n}) !important;
-        font-size: calc(0.75rem / #{$n}) !important;
-        line-height: calc(0.75rem / #{$n}) !important;
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-    }
+
+.badge-xs {
+    height: 1.15rem;
+    font-size: 10px;
+    line-height: 1rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
 }
 
 /**
