데스크탑 / 멤버 카드내 데이터 연결

--- a/src/styles/packs/app.scss
+++ b/src/styles/packs/app.scss
@@ -8,6 +8,7 @@
 @import "../content-layout/index";
 @import "../v2/index";
 @import "../button";
+@import "../tooltip";
 @import "../tasting";
 @import "../modal";
 @import "../blog";
