--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -881,3 +881,11 @@ body.hide-channel-talk {
     background-position: center;
   }
 }
+
+.absolute-cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
