데모페이지 / 비용조회 로딩 스피너 배경제거

--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -97,7 +97,7 @@
   height: 200px;
   display: inline-block;
   overflow: hidden;
-  background: #ffffff;
+  background: transparent;
 }
 
 .ldio-pcdc4ae6leg {
