랜딩페이지 / 스크롤 기반 애니메이션이 브라우저에 따라 지원되지 않는 문제 해결

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -889,3 +889,16 @@ body.hide-channel-talk {
   left: 0;
   right: 0;
 }
+
+/**
+ * Browser specific
+ */
+body {
+  @each $browser-name in ('naver', 'whale', 'safari', 'chrome', 'firefox', 'etc') {
+    &.browser--#{$browser-name} {
+      .#{$browser-name}-hidden {
+        display: none !important;
+      }
+    }
+  }
+}
