드롭다운 잘림 문제에 대한 괴랄한 해결

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -907,3 +907,15 @@ progress::-webkit-progress-value,
 progress::-moz-progress-bar {
   transition: width 200ms ease;
 }
+
+
+/**
+ * dropdown
+ */
+.fixed-dropdown {
+  .dropdown-content {
+    position: fixed;
+    left: var(--pos-l);
+    top: var(--pos-t);
+  }
+}
