--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -912,10 +912,33 @@ progress::-moz-progress-bar {
 /**
  * dropdown
  */
-.fixed-dropdown {
-  .dropdown-content {
+#dropdown-portal {
+  .dropdown-backdrop.focus {
     position: fixed;
-    left: var(--pos-l);
-    top: var(--pos-t);
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+  }
+
+  .dropdown-content {
+    visibility: hidden;
+    position: absolute;
+    z-index: 50;
+    opacity: 0;
+    transform-origin: top;
+    --tw-scale-x: .95;
+    --tw-scale-y: .95;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .dropdown-content.focus,
+  .dropdown-content:has(input.focus) {
+    visibility: visible;
+    opacity: 1;
   }
 }
