--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -942,3 +942,12 @@ progress::-moz-progress-bar {
     opacity: 1;
   }
 }
+
+@keyframes loading_pulse {
+  50% {
+    opacity: .5;
+  }
+}
+.animate-pulse {
+  animation: loading_pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
