--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -951,3 +951,31 @@ progress::-moz-progress-bar {
 .animate-pulse {
   animation: loading_pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+.link_to-clicked {
+  @apply opacity-40 disabled cursor-default relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 9999px;
+    border-width: 2px;
+    animation: spin 2s linear infinite;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: currentColor;
+    border-right-color: currentColor;
+  }
+}
