SelectColum 컴포넌트 구조분리

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -979,3 +979,8 @@ progress::-moz-progress-bar {
     border-right-color: currentColor;
   }
 }
+
+.no-click {
+  pointer-events: none;
+  cursor: default;
+}
