--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -952,6 +952,33 @@ progress::-moz-progress-bar {
   animation: loading_pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
+@keyframes loading {
+  0% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+.animate-loading {
+  background: linear-gradient(100deg, #eceff1 30%, #f6f7f8 50%, #eceff1 70%);
+  background-size: 400%;
+  animation: loading 1.2s ease-in-out infinite;
+}
+.before\:animate-loading {
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    @apply animate-loading;
+  }
+}
+
 .link_to-clicked {
   @apply opacity-40 disabled cursor-default relative;
 
@@ -983,4 +1010,8 @@ progress::-moz-progress-bar {
 .no-click {
   pointer-events: none;
   cursor: default;
+}
+
+.progress::-webkit-progress-value {
+  transition: width 200ms ease-in-out;
 }
