조직 Join 페이지 UI 대폭 수정

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1033,3 +1033,9 @@ progress::-moz-progress-bar {
   }
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+.text-gradient-color {
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
