로그인 페이지 UI 업데이트

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1035,7 +1035,7 @@ progress::-moz-progress-bar {
 }
 
 .text-gradient-color {
-  background-clip: text;
+  background-clip: text !important;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
