--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1033,3 +1033,10 @@ progress::-moz-progress-bar {
   }
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+.text-gradient-color {
+  background-clip: text !important;
+  -webkit-background-clip: text !important;
+  fill: transparent;
+  -webkit-text-fill-color: transparent;
+}
