구독불러오기 페이지 / 페이지 컨텐츠 UI 반응형 수정

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -85,3 +85,13 @@
         }
     }
 }
+
+@each $abbrev, $min-width in $new-breakpoints {
+    @for $i from 1 through 12 {
+        @media (min-width: $min-width) {
+            .#{$abbrev}\:grid-cols-#{$i} {
+                grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
+            }
+        }
+    }
+}
