--- a/src/styles/variables/_grid.scss
+++ b/src/styles/variables/_grid.scss
@@ -1,5 +1,6 @@
-$breakpoints: (xs: 420px, sm: 640px, md: 768px, lg: 1024px, xl: 1280px);
+$breakpoints: (xs: 420px, sm: 640px, sm2: 690px, md: 768px, md2: 890px, md3: 960px, lg: 1024px, xl: 1280px);
 $grid-bases: (10, 12, 24);
 $grid-bases-default: 12;
 //$gutter-size: 15px;
 $gutter-size: 20px;
+$new-breakpoints: (sm2: 690px, md2: 890px, md3: 960px);
