--- a/src/styles/variables/_color.scss
+++ b/src/styles/variables/_color.scss
@@ -4,6 +4,7 @@
  */
 $color-scordi: #5c5fee;
 $color-scordi-light: #a5a6f5;
+$color-layout-background: #fafafa;
 
 /**
  * Aliased Theme Color Palette.
