--- a/src/styles/packs/app.scss
+++ b/src/styles/packs/app.scss
@@ -1,5 +1,6 @@
 @import "../index.css";
 @import "../loading";
+@import "../animations";
 @import "../globals";
 @import "../grid";
 @import "../mainPage";
