--- a/src/styles/packs/app.scss
+++ b/src/styles/packs/app.scss
@@ -1,6 +1,7 @@
 @import "../index.css";
 @import "../loading";
 @import "../animations";
+@import "../direction";
 @import "../globals";
 @import "../grid";
 @import "../mainPage";
