--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -165,6 +165,17 @@ $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
     pointer-events: none;
 }
 
+.btn-disabled2 {
+    @apply bg-slate-200 border-slate-200 text-gray-400 #{!important};
+    @apply cursor-not-allowed;
+    pointer-events: none;
+}
+.disabled\:btn-disabled2 {
+    &:disabled {
+        @apply btn-disabled2;
+    }
+}
+
 //.hover-no {
 //  &.btn-primary   {@apply text-white bg-primary}
 //  &.btn-secondary {@apply text-white bg-secondary}
