--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -162,6 +162,26 @@ $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
     }
 }
 
+.btn-white {
+    @apply border-gray-300 bg-white;
+    @apply text-gray-700 shadow; // black
+
+    &:hover {
+        @apply bg-slate-50 border-gray-300;
+        @apply text-gray-800; // black
+    }
+
+    //&.btn-outline {
+    //    @apply border-gray-500 text-gray-500;
+    //    background-color: initial;
+    //
+    //    &:hover {
+    //        @apply bg-gray-500;
+    //        @apply text-white; // white
+    //    }
+    //}
+}
+
 .btn-disabled,
 .btn-disabled:hover,
 .btn[disabled],
