--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -263,3 +263,21 @@ $color-scale-list: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900);
 .btn-modal {
     @apply btn btn-lg btn-block btn-scordi font-medium text-white text-xl bg-slate-50;
 }
+
+/**
+ * Setting Page Button Style
+ */
+.btn3 {
+    @apply btn; // extends .btn
+    @apply rounded-md border-gray-300 bg-white shadow;
+    @apply text-16 text-gray-400 font-normal;
+
+    &:hover {
+        @apply bg-slate-50 border-gray-300;
+        @apply text-gray-800;
+    }
+
+    @apply px-4;
+    min-height: initial;
+    height: 42px;
+}
