SCSS / tailwindcss 에서 지원되지 않는 grid-cols-13 이상의 클래스 생성 (13부터 24까지)

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -95,3 +95,13 @@
         }
     }
 }
+
+
+/**
+ * grid-cols-* (기본정의된 12 스케일 이상의 값에 대한 생성)
+ */
+@for $i from 13 through 24 {
+    .grid-cols-#{$i} {
+        grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
+    }
+}
