--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,59 @@
     a {
         @apply text-scordi-600 underline;
     }
+  :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 222.2 84% 4.9%;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+        --radius: 0.5rem;
+    }
+  .dark {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
 }
 
 @media (min-width: 1536px) {
@@ -20,11 +73,10 @@
 }
 
 .container-fluid {
-    @apply px-4;
-    @media (min-width: 967px) {
-        // breakpoint sm, md, lg
-        @apply px-6;
-    }
+  @apply px-4;
+  @media (min-width: 967px) { /* breakpoint sm, md, lg */
+    @apply px-6;
+  }
 }
 
 html,
@@ -111,30 +163,30 @@ p {
  */
 .btn {
     & > .btn-icon {
-        //@extend .text-xl, .font-bold, .mr-2 !optional;
+        /* @extend .text-xl, .font-bold, .mr-2 !optional; */
 
-        //@extend .text-xl;
+        /* @extend .text-xl; */
         font-size: 1.25rem;
         line-height: 1.75rem;
 
-        //@extend .font-bold;
+        /*@extend .font-bold;*/
         font-weight: 700;
 
-        //@extend .mr-2;
+        /*@extend .mr-2;*/
         margin-right: 0.5rem;
     }
 
     &-sm > .btn-icon {
-        //@extend .text-lg, .font-bold, .mr-1 !optional;
+        /*@extend .text-lg, .font-bold, .mr-1 !optional;*/
 
-        //@extend .text-lg;
+        /*@extend .text-lg;*/
         font-size: 1.125rem;
         line-height: 1.75rem;
 
-        //@extend .font-bold;
+        /*@extend .font-bold;*/
         font-weight: 700;
 
-        //@extend .mr-1;
+        /*@extend .mr-1;*/
         margin-right: 0.25rem;
     }
 
@@ -239,13 +291,13 @@ body.hide-channel-talk {
     margin-left: auto;
     margin-right: auto;
 
-    .svg-success {
-        display: inline-block;
-        vertical-align: top;
-        //height: 300px;
-        width: 100%;
-        opacity: 1;
-        overflow: visible;
+  .svg-success {
+    display: inline-block;
+    vertical-align: top;
+    /*height: 300px;*/
+    width: 100%;
+    opacity: 1;
+    overflow: visible;
 
         @keyframes success-tick {
             0% {
@@ -306,14 +358,14 @@ body.hide-channel-talk {
             animation: success-circle-fill 300ms ease-out 1100ms forwards;
         }
 
-        // Can't animate stroke-dashoffset on IE 10 and 11, just show svg instead
-        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
-            .success-tick {
-                stroke-dasharray: 0;
-                stroke-dashoffset: 0;
-                animation: none;
-                opacity: 1;
-            }
+    /* Can't animate stroke-dashoffset on IE 10 and 11, just show svg instead */
+    @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+      .success-tick {
+        stroke-dasharray: 0;
+        stroke-dashoffset: 0;
+        animation: none;
+        opacity: 1;
+      }
 
             .success-circle-outline {
                 stroke-dasharray: 0;
@@ -386,7 +438,13 @@ body.hide-channel-talk {
 }
 
 .NewsLetterSection {
-    z-index: 0;
+  z-index: 0;
+  position: relative;
+
+  .card.image-full {
+    /*height: 500px;*/
+    /*max-height: 50vw;*/
+    background-color: #232528;
     position: relative;
 
     .card.image-full {
@@ -423,10 +481,10 @@ body.hide-channel-talk {
  */
 
 .main-header-img--base {
-    position: relative;
-    //top: -1em;
-    top: 0;
-    left: 0;
+  position: relative;
+  /*top: -1em;*/
+  top: 0;
+  left: 0;
 }
 @keyframes main-header-img {
     from {
@@ -438,11 +496,11 @@ body.hide-channel-talk {
     }
 }
 .main-header-img {
-    @apply main-header-img--base;
-    //transform-origin: 0 100%;
-    //animation: main-header-img auto ease-in-out;
-    //animation-timeline: scroll();
-    //animation-range: 0 70vh;
+  @apply main-header-img--base;
+  /*transform-origin: 0 100%;*/
+  /*animation: main-header-img auto ease-in-out;*/
+  /*animation-timeline: scroll();*/
+  /*animation-range: 0 70vh;*/
 }
 
 .main-header-img-left--base {
@@ -494,9 +552,9 @@ body.hide-channel-talk {
     align-items: center;
     justify-content: center;
 
-    img {
-        //max-height: 36px;
-    }
+  img {
+    /*max-height: 36px;*/
+  }
 }
 
 #CollectAppSection {
@@ -504,9 +562,9 @@ body.hide-channel-talk {
     --anim-range-start: 160vh;
     --anim-range-end: calc(200vh + #{$height});
 
-    height: $height;
-    //border: 10px dotted #000;
-    position: relative;
+  height: $height;
+  /*border: 10px dotted #000;*/
+  position: relative;
 
     visibility: hidden;
 
@@ -526,17 +584,17 @@ body.hide-channel-talk {
      * title 1,2 common
      */
 
-        p {
-            @apply text-4xl sm:text-5xl;
-            letter-spacing: -0.012em;
-            line-height: 130%;
-            //line-height: 28px;
-            font-weight: bold;
-            text-align: center;
-            visibility: hidden;
-            background-color: rgba(255, 255, 255, 0.7);
-            box-shadow: 0 0 40px #fff;
-        }
+    p {
+      @apply text-4xl sm:text-5xl;
+      letter-spacing: -0.012em;
+      line-height: 130%;
+      /*line-height: 28px;*/
+      font-weight: bold;
+      text-align: center;
+      visibility: hidden;
+      background-color: rgba(255, 255, 255, 0.7);
+      box-shadow: 0 0 40px #fff;
+    }
 
         /**
      * title 1
@@ -734,33 +792,59 @@ body.hide-channel-talk {
         //  }
         //}
 
-        .background {
-            //width: 100%;
-            //height: 100%;
-            ////opacity: 0;
-            //background-repeat: no-repeat;
-            //background-position: center;
-            //background-size: contain;
-            //transform: translateY(3rem);
+    /*
+    @keyframes logo-background {
+      0% {
+        opacity: 0;
+      }
+      10% {
+        opacity: 0;
+      }
+      40% {
+        opacity: 1;
+      }
+      75% {
+        opacity: 1;
+      }
+      80% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+    */
 
-            //animation: logo-background auto linear;
-            //transform-origin: 0 100%;
-            //animation-timeline: scroll(nearest block);
-            //animation-range: var(--anim-range-start) var(--anim-range-end);
+    .background {
+      /*
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      transform: translateY(3rem);
 
-            //display: flex;
-            //align-items: center;
-            //justify-content: center;
+      animation: logo-background auto linear;
+      transform-origin: 0 100%;
+      animation-timeline: scroll(nearest block);
+      animation-range: var(--anim-range-start) var(--anim-range-end);
 
-            & > div {
-                //$scordi-size: 150px;
-                //width: $scordi-size;
-                //height: $scordi-size;
-                //background-position: center;
-                //background-size: contain;
-                //background-repeat: no-repeat;
-            }
-        }
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      */
+
+      & > div {
+        /*
+        $scordi-size: 150px;
+        width: $scordi-size;
+        height: $scordi-size;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        */
+      }
     }
 }
 
@@ -778,10 +862,10 @@ body.hide-channel-talk {
             justify-content: space-between;
             cursor: pointer;
 
-            .question {
-                //margin-right: auto;
-                @apply text-lg sm:text-xl md:text-2xl font-semibold;
-            }
+      .question {
+        /*margin-right: auto;*/
+        @apply text-lg sm:text-xl md:text-2xl font-semibold;
+      }
 
             .icon-wrapper {
                 transition: all 250ms ease-in-out;
@@ -903,13 +987,11 @@ body.hide-channel-talk {
  * Browser specific
  */
 body {
-    @each $browser-name in ('chrome', 'safari', 'firefox', 'kakaoWebview', 'naverWebview', 'whale', 'edge', 'ie', 'etc')
-    {
-        &.browser--#{$browser-name} {
-            .#{$browser-name}-hidden {
-                display: none !important;
-            }
-        }
+  @each $browser-name in chrome, safari, firefox, kakaoWebview, naverWebview, whale, edge, ie, etc {
+    &.browser--#{$browser-name} {
+      .#{$browser-name}-hidden {
+        display: none !important;
+      }
     }
 }
 
@@ -1020,9 +1102,11 @@ progress::-moz-progress-bar {
 .link_to-loading-pulse {
     @apply opacity-40 cursor-default pointer-events-none relative animate-pulse-25;
 
-    //& > * {
-    //  visibility: hidden;
-    //}
+  /*
+  & > * {
+    visibility: hidden;
+  }
+  */
 
     &:before {
         position: absolute;
@@ -1124,3 +1208,14 @@ progress::-moz-progress-bar {
 }
 
 @include makeUnscaledGenericClassByColorName('layout-background', $color-layout-background);
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
